--- a/assets/index.html
+++ b/assets/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <head>
-  <title>Crystals Collector</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+  <title>The Wire "Package Collector"</title>
+  <link href='https://fonts.googleapis.com/css?family=Rubik Mono One|Josefin Slab|Passion One|Permanent Marker' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
+  <img src="">
   <header>
-    <h1>Crystals Collector</h1>
+    <h1>The Wire "Package Collector"</h1>
   </header>
   <div>
     <p>
-      You are given a random number.  Win the game by matching your total score to that number.  Add to your total score by clicking the four crystals, each carrying a different randomized value.  You lose the game if your total score goes above the random number or by running out of time.  Beware, crystal values are hidden and change every game!<br>
+      I'm giving you a package with a specific number.  To stay alive in the city, get your total score to match your package number.  Add to your total score by figuring out how much clout you can get from each player in the game, each carrying a different randomized value. If your total score goes above the random number, You won't make it to see next summer. Beware, character values are hidden and change every game!<br>
     </p>
   </div>
-  <div id='timer'>Time remaining: 20</div>
+  <div id='your_number'>Your Number</div>
   <div id="random-number"></div>
   <div id="wins"></div>
   <div id="losses"></div>
